<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Track\'N\'Walk</string>
    <string name="action_settings">Settings</string>
    <string name="start_destination">Start Destination</string>
    <string name="end_destination">End Destination</string>
    <string name="button_go">Go</string>
    <string name="label_a">A:</string>
    <string name="label_b">B:</string>
    <string name="marker_start">Start</string>
    <string name="marker_end">End</string>
    <string name="my_location">My Location</string>
    
</resources>