<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    <fragment android:id="@+id/map"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:name="com.google.android.gms.maps.MapFragment"
          />
    <RelativeLayout 
        android:id="@+id/rlInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_background"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp">
	    <ImageButton
	        android:id="@+id/ibSwap"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:padding="12dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_custom"
            android:src="@drawable/swap_button"
            android:onClick="onClick"
            android:scaleType="fitXY"
            />
        <TextView 
		    android:id="@+id/tvStart"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/label_a" 
		    android:textColor="#50509E"
		    android:layout_margin="7dp"
		    android:textSize="24dp"
    	    />
	    <EditText
	        android:id="@+id/etStart"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPostalAddress"
	        android:hint="@string/start_destination"
	        android:paddingLeft="@dimen/padding_edittext"
	        android:paddingTop="@dimen/padding_edittext"
	        android:paddingBottom="@dimen/padding_edittext"
	        android:layout_toRightOf="@id/tvStart"
	        android:layout_toLeftOf="@id/ibSwap"
	        android:text="@string/my_location"
	        />
	    <TextView 
            android:id="@+id/tvEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_b"
            android:textColor="#F75757"
            android:textSize="24dp"
            android:layout_margin="7dp"
            android:layout_below="@id/etStart"      
            />
        <ImageButton
            android:id="@+id/buttonGo"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/button_go"
            android:layout_below="@id/etStart"
            android:padding="2dp"
            android:layout_toLeftOf="@id/ibSwap"
            android:src="@android:drawable/ic_menu_search"
            android:background="@drawable/button_custom"
            android:onClick="onClick"
               />
        <EditText
	        android:id="@+id/etDestination" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPostalAddress"
	        android:layout_toRightOf="@id/tvEnd"
	        android:layout_below="@id/etStart"
	        android:paddingLeft="@dimen/padding_edittext"
            android:paddingTop="@dimen/padding_edittext"
            android:paddingBottom="@dimen/padding_edittext"
	        android:layout_toLeftOf="@id/buttonGo"
	        android:hint="@string/end_destination"
	        android:imeOptions="actionSearch"
            />
    </RelativeLayout>
</RelativeLayout>